fix overview spacing

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -6,6 +6,12 @@
   gap: var(--spacing-2);
 }
 
+@media (max-width: 850px) {
+  .section {
+    gap: var(--spacing);
+  }
+}
+
 .title {
   font-size: 1.75rem;
   font-size: clamp(1.75rem, 1.65rem + 0.5vw, 2.25rem);
